@@ -11,10 +11,10 @@ class Proverb {
   String recite() {
     List<String> sentences = new ArrayList<>();
     for (int i = 0; i < words.length - 1; ++i) {
-      sentences.add(String.format("For want of a %s the %s was lost.", words[i], words[i + 1]));
+      sentences.add("For want of a %s the %s was lost.".formatted(words[i], words[i + 1]));
     }
     if (words.length != 0) {
-      sentences.add(String.format("And all for the want of a %s.", words[0]));
+      sentences.add("And all for the want of a %s.".formatted(words[0]));
     }
 
     return String.join("\n", sentences);
